--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
-  html {
+ html {
     font-size: 15px;
   }
 
@@ -211,7 +210,7 @@
   .thumbnail-modal {
     z-index:1;
     display:none;
-    padding-top:10px;
+    padding:10px;
     position:fixed;
     left:0;
     top:0;
@@ -222,7 +221,7 @@
     background-color:rgba(0,0,0,0.8)
   }
 
-  .modal-content{
+  .modalcontent{
     margin: auto;
     display: block;
     position: absolute;
@@ -386,7 +385,3 @@
       float: left;
     }
   }
-
-
-
-
