--- a/css/style.css
+++ b/css/style.css
@@ -96,14 +96,14 @@ img {
 .contact p {
   font-size:18px;
   font-weight:400;
-  color: #5688af;
+  color: #5d5d5d;
   margin:1em 0em 2em;
   text-align:center;
 }
 
 .contact h3 {
-  font-size: 2.5em;
-  color: #5688af;
+  font-size: 30px;
+  color: #5d5d5d;
   text-transform: uppercase;
   margin: 0 auto;
   border-bottom: 2px solid white;
@@ -231,8 +231,8 @@ li.gallery__item p {
 }
 
 .about h3 {
-  font-size: 2.5em;
-  color: #5688af;
+  font-size: 30px;
+  color: #5d5d5d;
   text-transform: uppercase;
   margin: 0 auto;
   border-bottom: 2px solid white;
@@ -245,8 +245,8 @@ li.gallery__item p {
 }
 
 .gallery h3 {
-  font-size: 2.5em;
-  color: #5688af;
+  font-size: 30px;
+  color: #5d5d5d;
   text-transform: uppercase;
   margin: 0 auto;
   border-bottom: 2px solid white;
